fix(versions): improved contrast on highlighted version button (#2685)
* fix(versions): improved contrast on highlighted version button

* fix(versions): Updated CSS CR fix

--- a/src/elements/content-sidebar/versions/VersionsItemButton.scss
+++ b/src/elements/content-sidebar/versions/VersionsItemButton.scss
@@ -42,5 +42,9 @@
     &.bcs-is-selected {
         background-color: $hover-blue-background;
         border-color: $bdl-box-blue;
+
+        .bcs-VersionsItem-info {
+            color: inherit;
+        }
     }
 }
